--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,27 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.bg-01 {
+    background: #1D1D2C;
+}
+
+.ldBar {
+    position: relative;
+  }
+  .ldBar.label-center > .ldBar-label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-shadow: 0 0 3px #fff;
+  }
+  .ldBar-label:after {
+    content: "%";
+    display: inline;
+  }
+  .ldBar.no-percent .ldBar-label:after {
+    content: "";
+  }
