--- a/src/app/pages/loading/loading.page.css
+++ b/src/app/pages/loading/loading.page.css
@@ -22,9 +22,15 @@
 
 .wrapper ion-progress-bar {
   width: 200px;
-  height: 25px;
-  border-radius: 10px;
-  --background: red!important;
-  --progress-background: linear-gradient(to right, #3398da 35%, #0566a2 68%);
+  height: 30px;
+  border-radius: 20px;
+  -webkit-box-shadow: 0 3px 3px -5px #E40C2B;
+          box-shadow: 0 3px 3px -5px #E40C2B;
+  --background: #f7f4e9;
+  --progress-background: #E40C2B;
+}
+
+.wrapper .credtis {
+  font-size: 18px;
 }
 /*# sourceMappingURL=loading.page.css.map */
