--- a/src/app/pages/loading/loading.page.html
+++ b/src/app/pages/loading/loading.page.html
@@ -1,9 +1,7 @@
 <div class="wrapper bg-01">
   <!-- <h4>Upload Progress <span *ngIf="p_bar_value">{{p_bar_value*100 | number}}%</span></h4> -->
-  <img [src]="logo" alt="logo" class="logo mb-5">
-  <ion-progress-bar [value]="p_bar_value" class="loader mb-5">{{p_bar_value*100 | number}}%</ion-progress-bar>
-  <p class="text-white">Designed y progammed by iyofc minxs</p>
-
-  
+  <img [src]="logo" alt="logo" class="logo mb-3">
+  <ion-progress-bar [value]="p_bar_value" class="loader mb-3">{{p_bar_value*100 | number}}%</ion-progress-bar>
+  <p class="text-white credtis">Made with &hearts; by IyoFC & Minx</p>
 </div>
 
