--- a/src/app/pages/loading/loading.page.scss
+++ b/src/app/pages/loading/loading.page.scss
@@ -10,12 +10,16 @@
         max-width: 200px;
     }
 
-
     ion-progress-bar {
         width: 200px;
-        height: 25px;
-        border-radius: 10px;
-        --background: red!important;
-        --progress-background: linear-gradient(to right, #3398da 35%, #0566a2 68%);
+        height: 30px;
+        border-radius: 20px;
+        box-shadow: 0 3px 3px -5px #E40C2B;
+        --background: #f7f4e9;
+        --progress-background: #E40C2B;
+    }
+
+    .credtis {
+        font-size: 18px;
     }
 }
