--- a/src/app/pages/add-users/add-users.page.css
+++ b/src/app/pages/add-users/add-users.page.css
@@ -1,3 +1,15 @@
+.wrapper .header {
+  color: white;
+}
+
+.wrapper .header h3 {
+  margin: 0 !important;
+}
+
+.wrapper .header .icons {
+  font-size: 40px;
+}
+
 .wrapper .players-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -18,38 +30,58 @@
       -ms-flex-direction: row;
           flex-direction: row;
   font-size: 25px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .wrapper .players-list .player-item .player-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 15%;
   font-size: 40px;
   border-radius: 5px 0 0 5px;
 }
 
-.wrapper .players-list .player-item div {
-  width: 100%;
+.wrapper .players-list .player-item .player-name {
+  width: 75%;
+}
+
+.wrapper .players-list .player-item .player-action {
+  width: 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   border-radius: 0 5px 5px 0;
 }
 
-.wrapper .players-list .player-item div .player-action {
+.wrapper .add-player {
+  font-size: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #EBA63F;
+}
+
+.wrapper .play button {
+  border-radius: 20px;
+  font-size: 20px;
+}
+
+.wrapper .footer-menu {
+  font-size: 50px;
+  color: white;
 }
 /*# sourceMappingURL=add-users.page.css.map */
