--- a/src/app/pages/select-three/select-three.page.html
+++ b/src/app/pages/select-three/select-three.page.html
@@ -1,4 +1,4 @@
-<div class="wrapper bg-05 h-100 py-4 d-flex justify-content-center align-items-center">
+<div (click)="redirectTo()" class="wrapper bg-05 h-100 py-4 d-flex justify-content-center align-items-center">
   <div class="container">
     <div class="row">
       <div class="col-12 d-flex justify-content-center flex-column align-items-center">
