Create DataService and link with another components

--- a/src/app/components/dices/dices.component.scss
+++ b/src/app/components/dices/dices.component.scss
@@ -21,7 +21,7 @@
     grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
     grid-template-rows: auto;
     justify-items: center;
-    padding: 2rem;
+    padding: 0 2rem 3rem 0;
     perspective: 600px;
   }
   .die-list {
