--- a/src/app/pages/add-users/add-users.page.html
+++ b/src/app/pages/add-users/add-users.page.html
@@ -21,7 +21,7 @@
     </div>
   
     <div class="play d-flex justify-content-center">
-      <button type="submit" class="bg-02 p-3">PLAY <ion-icon name="play"></ion-icon></button>
+      <button type="submit" class="bg-02 p-3" (click)='onSubmit()'>PLAY <ion-icon name="play"></ion-icon></button>
       {{textoDeInput}}
     </div>
     
