add class in select-three-page for fix margin

--- a/src/app/pages/select-three/select-three.page.scss
+++ b/src/app/pages/select-three/select-three.page.scss
@@ -1,5 +1,8 @@
 .wrapper {
-
+    .row.-margin{
+        margin-right: 0;
+        margin-left: 0;
+    }
     .devil {
         max-width: 150px;
     }
