--- a/src/app/pages/add-users/add-users.page.html
+++ b/src/app/pages/add-users/add-users.page.html
@@ -7,7 +7,7 @@
   <div class="players-list mb-2">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-    <div class="player-item mb-2" formArrayName="users" *ngFor="let creds of form.controls.users?.value; let i = index">
+    <div class="player-item mb-2" formArrayName="users" *ngFor="let creds of form.controls.users.controls; let i = index">
       <div class="player-icon bg-02 p-2"><ion-icon name="person"></ion-icon></div>
       <ng-container [formGroupName]="i">
         <ion-input class="player-name bg-01 pl-4" placeholder="Nombre jugador" formControlName="username"></ion-input>
