Add new componente, you-are

--- a/src/app/pages/gentleman-dices/gentleman-dices.page.html
+++ b/src/app/pages/gentleman-dices/gentleman-dices.page.html
@@ -1,5 +1,5 @@
 <div class="wrapper bg-05 h-100">
-  <div class="text" *ngIf='getUserPlaying()'>
+  <div class="text -font-style" *ngIf='getUserPlaying()'>
     Es tu turno {{getUserPlaying().username}}
   </div>
 </div>
