--- a/src/app/components/dices/dices.component.html
+++ b/src/app/components/dices/dices.component.html
@@ -70,4 +70,6 @@
     </li>
   </ol>
 </div>
-<button type="button" class="button" (click)="rollDice()">Tirar dados</button>
+<div class="button-container">
+  <button type="button" class="button" (click)="rollDice()">Tirar dados</button>
+</div>
