--- a/src/app/components/dices/dices.component.scss
+++ b/src/app/components/dices/dices.component.scss
@@ -21,8 +21,15 @@
     grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
     grid-template-rows: auto;
     justify-items: center;
-    padding: 0 2rem 3rem 0;
+    padding: 0 2rem 6rem 0;
     perspective: 600px;
+  }
+  .button-container {
+    display: flex;
+    justify-content: center;
+    button {
+      border-radius: 6px;
+    }
   }
   .die-list {
     display: grid;
