--- a/src/app/components/dices/dices.component.scss
+++ b/src/app/components/dices/dices.component.scss
@@ -30,6 +30,9 @@
     button {
       border-radius: 6px;
     }
+    .-disabled {
+      background-color: #707070;
+    }
   }
   .die-list {
     display: grid;
