--- a/src/app/components/dices/dices.component.html
+++ b/src/app/components/dices/dices.component.html
@@ -71,6 +71,6 @@
   </ol>
 </div>
 <div class="button-container">
-  <button type="button" class="button" (click)="rollDice()">Tirar dados</button>
+  <button type="button" class="button" [disabled]='showButtonNextUser' [ngClass]="{'-disabled': showButtonNextUser}" (click)="rollDice()">Tirar dados</button>
   <button type="button" class="button" style="margin-left: 20px;" (click)="getNext(actualPlayerIsSeniorDelTres)" *ngIf='showButtonNextUser'>Siguiente jugador</button>
 </div>
