cambio el padding para que no sobresalgan los dados

--- a/src/app/components/dices/dices.component.scss
+++ b/src/app/components/dices/dices.component.scss
@@ -21,7 +21,7 @@
     grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
     grid-template-rows: auto;
     justify-items: center;
-    padding: 0 2rem 6rem 0;
+    padding: 0 3.3rem 6rem 1.7rem;
     perspective: 600px;
   }
   .button-container {
