--- a/src/app/components/dices/dices.component.scss
+++ b/src/app/components/dices/dices.component.scss
@@ -21,7 +21,7 @@
     grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
     grid-template-rows: auto;
     justify-items: center;
-    padding: 0 3.3rem 6rem 1.7rem;
+    padding: 0 1.7rem 3.3rem 1.7rem;
     perspective: 600px;
   }
   .button-container {
@@ -35,9 +35,10 @@
     }
   }
   .die-list {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 6rem;
     list-style-type: none;
     transform-style: preserve-3d;
@@ -54,8 +55,7 @@
     box-shadow: inset -0.35rem 0.35rem 0.75rem rgba(0, 0, 0, 0.3),
       inset 0.5rem -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
     display: grid;
-    grid-column: 1;
-    grid-row: 1;
+    position: absolute;
     grid-template-areas:
       "one two three"
       "four five six"
