--- a/src/app/pages/gentleman-dices/gentleman-dices.page.scss
+++ b/src/app/pages/gentleman-dices/gentleman-dices.page.scss
@@ -8,3 +8,12 @@
     font-size: 2rem;
     color: #ffffff;
 }
+.-prenda-container {
+    position: absolute;
+    top: 4rem;
+    width: 85%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.5em;
+    color: #ffffff;
+}
