--- a/src/app/pages/select-three/select-three.page.html
+++ b/src/app/pages/select-three/select-three.page.html
@@ -1,7 +1,7 @@
 <div (click)="redirectTo()" class="wrapper bg-05 h-100 py-4 d-flex justify-content-center align-items-center">
   <div class="container">
     <div class="row -margin">
-      <div class="col-12 d-flex justify-content-center flex-column align-items-center">
+      <div class="col-12 d-flex justify-content-center flex-column align-items-center" style="padding-left: 0 !important;">
         <img src="../../../assets/icon/devil.png" alt="" class="devil mb-5">
         <h1 class="text-center text-white">HORA DE ELEGIR A LOS SEÑORES DEL TRES</h1>
       </div>
