--- a/src/app/components/play-load-page/play-load-page.component.html
+++ b/src/app/components/play-load-page/play-load-page.component.html
@@ -1,3 +1,9 @@
-<p (click)='redirectTo()'>
-  play-load-page works!
-</p>
+<div (click)="redirectTo()" class="wrapper bg-05 h-100 py-4 d-flex justify-content-center align-items-center">
+  <div class="container">
+    <div class="row -margin">
+      <div class="col-12 d-flex justify-content-center flex-column align-items-center" style="padding-left: 0 !important;">
+        <h1 class="text-center text-white">HORA DE ELEGIR A LOS SEÑORES DEL TRES</h1>
+      </div>
+    </div>
+  </div>
+</div>
