--- a/src/app/components/play-load-page/play-load-page.component.html
+++ b/src/app/components/play-load-page/play-load-page.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row -margin">
       <div class="col-12 d-flex justify-content-center flex-column align-items-center" style="padding-left: 0 !important;">
-        <h1 class="text-center text-white">HORA DE ELEGIR A LOS SEÑORES DEL TRES</h1>
+        <h1 class="text-center text-white">{{message}}</h1>
       </div>
     </div>
   </div>
