--- a/src/app/components/play-load-page/play-load-page.component.css
+++ b/src/app/components/play-load-page/play-load-page.component.css
@@ -6,4 +6,4 @@
 .wrapper .devil {
   max-width: 150px;
 }
-/*# sourceMappingURL=select-three.page.css.map */
+/*# sourceMappingURL=play-load-page.component.css.map */
