--- a/src/app/components/dices/dices.component.css
+++ b/src/app/components/dices/dices.component.css
@@ -32,18 +32,39 @@ body {
   -ms-grid-rows: auto;
       grid-template-rows: auto;
   justify-items: center;
-  padding: 2rem;
+  padding: 0 1.7rem 3.3rem 1.7rem;
   -webkit-perspective: 600px;
           perspective: 600px;
 }
 
+.button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.button-container button {
+  border-radius: 6px;
+}
+
+.button-container .-disabled {
+  background-color: #707070;
+}
+
 .die-list {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 6rem;
   list-style-type: none;
   -webkit-transform-style: preserve-3d;
@@ -71,11 +92,8 @@ body {
           box-shadow: inset -0.35rem 0.35rem 0.75rem rgba(0, 0, 0, 0.3), inset 0.5rem -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
   display: -ms-grid;
   display: grid;
-  -ms-grid-column: 1;
-  grid-column: 1;
-  -ms-grid-row: 1;
-  grid-row: 1;
-      grid-template-areas: "one two three" "four five six" "seven eight nine";
+  position: absolute;
+      grid-template-areas: "one two three" "four five six" "seven eight nine";
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[3];
