--- a/src/app/components/you-are/you-are.component.scss
+++ b/src/app/components/you-are/you-are.component.scss
@@ -4,15 +4,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    .img-vomit {
+        max-width: 150px;
+    }
     .-description {
         font-size: 2.5rem;
-        padding: 25px;
         color: #ffffff;
     }
-    ion-icon {
-        font-size: 60px;
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
+    // ion-icon {
+    //     font-size: 60px;
+    //     position: absolute;
+    //     top: 0;
+    //     right: 0;
+    //     color: white;
+    // }
 }
