--- a/src/app/components/how-slider/how-slider.page.html
+++ b/src/app/components/how-slider/how-slider.page.html
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="skip">
-        <p class="font-italic font-small">Skip tutorial</p>
+        <p (click)="goPlayersScreen()" class="font-italic font-small">Skip tutorial</p>
       </div>
     </ion-slide>
 
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="skip">
-        <p class="font-italic font-small">Skip tutorial</p>
+        <p (click)="goPlayersScreen()" class="font-italic font-small">Skip tutorial</p>
       </div>
     </ion-slide>
 
@@ -36,9 +36,6 @@
         <div class="next">
           <ion-button class="bg-01 text-white" (click)="goPlayersScreen()" fill="clear">¡Entendido! <ion-icon slot="end" name="arrow-forward"></ion-icon></ion-button>
         </div>
-      </div>
-      <div class="skip">
-        <p class="font-italic font-small">Skip tutorial</p>
       </div>
     </ion-slide>
 
