--- a/src/app/pages/gentleman-dices/gentleman-dices.page.scss
+++ b/src/app/pages/gentleman-dices/gentleman-dices.page.scss
@@ -1,19 +1,25 @@
-.app-dice{
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
+// .app-dice{
+//     position: absolute;
+//     width: 100%;
+//     top: 50%;
+//     transform: translateY(-50%);
+// }
+.wrapper {
+    justify-content: space-around;
+    flex-direction: column;
 }
 .text.-font-style{
     font-size: 2rem;
     color: #ffffff;
 }
 .-prenda-container {
-    position: absolute;
-    top: 4rem;
-    width: 85%;
-    left: 50%;
-    transform: translateX(-50%);
+    // position: absolute;
+    // top: 4rem;
+    // width: 85%;
+    // left: 50%;
+    // transform: translateX(-50%);
     font-size: 1.5em;
-    color: #ffffff;
+}
+.brdr-10 {
+    border-radius: 10px;
 }
