--- a/src/app/components/play-load-page/play-load-page.component.html
+++ b/src/app/components/play-load-page/play-load-page.component.html
@@ -1,8 +1,9 @@
-<div (click)="redirectTo()" class="wrapper bg-05 h-100 py-4 d-flex justify-content-center align-items-center">
+<div (click)="redirectTo()" class="wrapper bg-06 h-100 py-4 d-flex justify-content-center align-items-center">
   <div class="container">
     <div class="row -margin">
       <div class="col-12 d-flex justify-content-center flex-column align-items-center" style="padding-left: 0 !important;">
-        <h1 class="text-center text-white">{{message}}</h1>
+        <img src="../../../assets/icon/vomitos.png" alt="" class="devil mb-5">
+        <h1 class="text-center text-white">{{message}} sois los señores del tres en esta partida. Coger un cubo, y prepararos para vomitar.</h1>
       </div>
     </div>
   </div>
