--- a/src/app/pages/loading/loading.page.html
+++ b/src/app/pages/loading/loading.page.html
@@ -2,6 +2,6 @@
   <!-- <h4>Upload Progress <span *ngIf="p_bar_value">{{p_bar_value*100 | number}}%</span></h4> -->
   <img [src]="logo" alt="logo" class="logo mb-3">
   <ion-progress-bar [value]="p_bar_value" class="loader mb-3">{{p_bar_value*100 | number}}%</ion-progress-bar>
-  <p class="text-white credtis">Made with &hearts; by IyoFC & Minx</p>
+  <p class="text-white credtis">Made with &hearts; by stringIyan</p>
 </div>
 
