--- a/src/app/pages/add-users/add-users.page.scss
+++ b/src/app/pages/add-users/add-users.page.scss
@@ -53,8 +53,12 @@
 
     .play {
         button {
-            border-radius: 20px;
+            border-radius: 10px;
             font-size: 20px;
+
+            ion-icon {
+                font-size: 20px;
+            }
         }
     }
 
