--- a/src/app/pages/gentleman-dices/gentleman-dices.page.scss
+++ b/src/app/pages/gentleman-dices/gentleman-dices.page.scss
@@ -9,21 +9,32 @@
     flex-direction: column;
     padding-bottom: 150px;
 }
+.app-dice {
+    display: block;
+    margin-bottom: -4rem;
+}
 .text.-font-style{
     font-size: 2rem;
     color: #ffffff;
     position: absolute;
     width: 85%;
     left: 50%;
-    top: 10rem;
+    top: 12rem;
     transform: translateX(-50%);
+}
+.img-vomit {
+    position: absolute;
+    top: 1.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 130px;
 }
 .-prenda-container {
     position: absolute;
     // top: 4rem;
     width: 85%;
     left: 47.5%;
-    top: 10rem;
+    top: 12rem;
     transform: translateX(-50%);
     font-size: 1.5em;
 }
