--- a/src/app/components/how-slider/how-slider.page.scss
+++ b/src/app/components/how-slider/how-slider.page.scss
@@ -2,6 +2,7 @@ ion-slides {
     height: 100%;
     --bullet-background-active: #EBA63F;
     --bullet-background: #3cbcc3;
+    color: white;
 
     .font-small {
       font-size: 14px;
