--- a/src/app/components/how-slider/how-slider.page.css
+++ b/src/app/components/how-slider/how-slider.page.css
@@ -2,6 +2,7 @@ ion-slides {
   height: 100%;
   --bullet-background-active: #EBA63F;
   --bullet-background: #3cbcc3;
+  color: white;
 }
 
 ion-slides .font-small {
