--- a/src/app/pages/add-users/add-users.page.css
+++ b/src/app/pages/add-users/add-users.page.css
@@ -76,7 +76,11 @@
 }
 
 .wrapper .play button {
-  border-radius: 20px;
+  border-radius: 10px;
+  font-size: 20px;
+}
+
+.wrapper .play button ion-icon {
   font-size: 20px;
 }
 
