--- a/src/app/pages/gentleman-dices/gentleman-dices.page.css
+++ b/src/app/pages/gentleman-dices/gentleman-dices.page.css
@@ -1,18 +1,46 @@
 .wrapper {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-bottom: 150px;
+}
+
+.app-dice {
+  display: block;
+  margin-bottom: -4rem;
 }
 
 .text.-font-style {
   font-size: 2rem;
   color: #ffffff;
+  position: absolute;
+  width: 85%;
+  left: 50%;
+  top: 12rem;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.img-vomit {
+  position: absolute;
+  top: 1.5rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 130px;
 }
 
 .-prenda-container {
+  position: absolute;
+  width: 85%;
+  left: 47.5%;
+  top: 12rem;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   font-size: 1.5em;
 }
 
